--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -10,9 +10,5 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=notificationTopic
 spring.kafka.consumer.group-id= notificationId
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.producer.properties.spring.json.type.mapping=com.jirafik.service.OrderPlacedEvent
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.jirafik.service.event
-
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.type.mapping=event:com.jirafik.service.OrderPlacedEvent
