--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.6</version>
+        <version>3.0.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -14,16 +14,20 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>TechieMicroservices</name>
     <description>TechieMicroservices</description>
-<!--    <modules>-->
-<!--        <module>product-service</module>-->
-<!--        <module>order-service</module>-->
-<!--        <module>inventory-service</module>-->
-<!--        <module>eureka-server</module>-->
-<!--    </modules>-->
+    <packaging>pom</packaging>
+    <modules>
+        <module>product-service</module>
+        <module>order-service</module>
+        <module>inventory-service</module>
+        <module>eureka-server</module>
+        <module>api-gateway</module>
+        <module>notification-service</module>
+    </modules>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -36,13 +40,33 @@
         </dependency>
     </dependencies>
 
-
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:17.0.4.1_1-jre</image>
+                    </from>
+                    <to>
+                        <image>registry.hub.docker.com/jirafus400/${project.artifactId}</image>
+                    </to>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>dockerBuild</goal>
+                        </goals>
+                    </execution>
+<!--                    dckr_pat_bK9RWfNxlaT44dlH_stbGJupo6E-->
+                </executions>
             </plugin>
         </plugins>
     </build>
