--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=api-gateway
+spring.main.web-application-type=reactive
 
 #app.eureka-server=localhost
 eureka.instance.hostname=localhost
