--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -1,6 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://postgres:5431/order_service
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://mysql:5431/order_service?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=javauser
 spring.datasource.password=javauser
 eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
