--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -1,5 +1,6 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://mysql:5432/inventory-service?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=javauser
-spring.datasource.password=javauser
-eureka.client.serviceUrl.defaultZone=http://eureka:password@discovery-server:8761/eureka
+spring.datasource.url=jdbc:postgresql://postgres:5432/inventory-service
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=ptechie
+spring.datasource.password=password
+eureka.client.service-url.defaultZone=http://eureka:password@discovery-server:8761/eureka
