--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.application.name=product-service
 server.port=0
 
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
-spring.application.name=product-service
+
 
 
 
