--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -1,3 +1,3 @@
 server.port=8080
-eureka.client.service-url.defaultZone=http://eureka:password@discovery-server:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka:password@eureka-server:8761/eureka
 spring.security.oauth2.resourceserver.jwt.issuer-uri= http://keycloak:8080/realms/spring-boot-microservices-realm
