--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=notification-service
 server.port=0
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 
 # Kafka Properties
 spring.kafka.bootstrap-servers=localhost:9092
