--- a/product-service/src/main/resources/application-docker.properties
+++ b/product-service/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.host=mongo
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=product-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
 server.port=8080
-eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
