--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/product-service
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.application.name=product-service
 server.port=0
 
