--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/inventory-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory-service
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.application.name=inventory-service
 server.port=8080
 eureka.client.service-url.defaultZone=http://eureka:password@eureka-server:8761/eureka
