--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://postgres:5431/order_service
+spring.datasource.url=jdbc:postgresql://localhost:5431/order_service
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.application.name=order-service
 server.port=8080
-eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@eureka-server:8761/eureka
 spring.kafka.bootstrap-servers=broker:29092
