--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/order_service?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=javauser
-spring.datasource.password=javauser
+spring.datasource.url=jdbc:postgresql://localhost:5432/order_service
+spring.datasource.username=postgres
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.application.name=order-service
 
 server.port=8081
 
-eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
-spring.application.name=order-service
 
 #Resilience4f properties
 resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
