--- a/product-service/src/main/resources/application-docker.properties
+++ b/product-service/src/main/resources/application-docker.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/product-service
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.application.name=product-service
 server.port=8080
-eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@eureka-server:8761/eureka
